# claude-workbench

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
core/: Cargo.toml
core-acp/: Cargo.toml
core-acp/src/: host.rs  lib.rs
core/src/: acp_map.rs  fs.rs  git.rs  history.rs  label.rs  lib.rs  persist.rs  project_type.rs  runner.rs  scrollback_store.rs  session.rs  snapshot.rs  ssh.rs  timeline.rs
core/src/git/: branch.rs  history.rs  rewrite.rs  status.rs  worktree.rs
core/src/jsonl/: locate.rs  map.rs  mod.rs  record.rs  tail.rs
core/src/jsonl/map/: blocks.rs  extract.rs
core/src/search/: content.rs  files.rs  mod.rs
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  panel.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: claude.rs  files.rs  git.rs  ssh.rs  task.rs  terminal.rs
src/components/: ClaudePanel.tsx  ClaudeTab.tsx  ClaudeTermPanel.tsx  CommitFileView.tsx  CommitFilesSidebar.tsx  ContextMenu.tsx  DiffPanel.tsx  DropTargetOverlay.tsx  EditorPanel.tsx  FilePeekViewer.tsx  FolderTree.tsx  GitGraph.tsx  GitHistoryViewer.tsx  GitPanel.tsx  MainArea.tsx  PdfView.tsx  PlaceholderPanel.tsx  PopoutWorkbench.tsx  ProjectTabs.tsx  RunMenu.tsx  SearchPanel.tsx  SshTab.tsx  StudyFileView.tsx  StudySession.tsx  StudySidebar.tsx  StudyTree.tsx  StudyView.tsx  StudyViewer.tsx  TerminalPanel.tsx  TerminalSettings.tsx  TimelinePanel.tsx  TimelineView.tsx  TypeBadges.tsx  WorktreePanel.tsx  cmLang.ts  cmTheme.ts  markdown.test.ts  markdown.tsx  panelRegistry.tsx  scrollKeys.test.ts  (+2 more)
src/hooks/: useFileText.ts
src/state/: claudeUi.ts  dropIndicator.ts  dropOut.ts  panelFocus.ts  panelSession.ts  panelTransfer.ts  panelTransferTarget.ts  store.ts  windowTransfer.ts
src/utils/: error.test.ts  error.ts
