[package]
name = "core-acp"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-client-protocol = "0.4"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
# Pure timeline mapping (sync) lives in `core`; the async host applies updates
# and records write outcomes through it.
core_lib = { path = "../core", package = "core" }
tokio = { version = "1", features = ["rt", "process", "io-util", "macros", "sync", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "io-util", "macros", "sync", "test-util"] }
