[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
# Pure ACP schema types (serde only — no tokio/async), so the `session/update`
# -> timeline mapping (acp_map) stays in the synchronous, headless `core`.
agent-client-protocol-schema = "0.4"
