[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
# Native SSH client (no system `ssh`/`sshpass` dependency). russh 0.50+ merged
# russh-keys into `russh::keys`. Runs on a tokio runtime encapsulated inside the
# SSH session thread; SessionManager's public API stays synchronous.
russh = "0.54"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "net", "time", "io-util"] }
