[package]
name = "multi-terminal"
version = "0.1.0"
description = "Multi-terminal IDE shell"
edition = "2021"

# The Tauri app's reusable logic lives in a lib so both desktop `main.rs` and
# (future) mobile entry points can share it.
[lib]
name = "multi_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local calendar date for timeline persistence folders (YYYY-MM-DD).
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Renamed to `core_lib` in code to avoid shadowing the std `core` crate.
core_lib = { path = "../core", package = "core" }
