[package]
name = "claude-workbench"
version = "0.1.0"
description = "Claude Workbench — Claude-centric IDE shell (terminals + Git + study)"
edition = "2021"

# The Tauri app's reusable logic lives in a lib so both desktop `main.rs` and
# (future) mobile entry points can share it.
[lib]
name = "claude_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local calendar date for timeline persistence folders (YYYY-MM-DD).
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Renamed to `core_lib` in code to avoid shadowing the std `core` crate.
core_lib = { path = "../core", package = "core" }
# OS keychain for SSH secrets (passwords / key passphrases). `sync-secret-service`
# uses the Secret Service (gnome-keyring/KWallet) over the system libdbus;
# `crypto-rust` avoids an OpenSSL build dependency.
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
